--- a/vlm_meme_understanding.ipynb
+++ b/vlm_meme_understanding.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "oX1jZcOfn1qC"
       },
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "GvEU33CzO5Qt"
       },
@@ -170,27 +170,30 @@
       "source": [
         "# OCR\n",
         "\n",
-        "Using OCR with Janus"
+        "Optical Character Recognition (OCR) is a fundamental task in Computer Vision.\n",
+        "\n",
+        "And, I think, using it to parse test from memes is a good use case! Memes typically combine both visual elements and text. While traditional OCR systems are specifically trained for text extraction, it's interesting to test how well general-purpose Vision Language Models (VLMs) can perform this task.\n",
+        "\n",
+        "Testing VLMs on OCR helps us understand:\n",
+        "\n",
+        "1. Their ability to perceive and accurately read text in various fonts, orientations, and styles common in memes\n",
+        "\n",
+        "2. How well they can distinguish between text and visual elements\n",
+        "\n",
+        "3. Their robustness in handling text that's integrated into images rather than presented as plain text\n",
+        "\n",
+        "Let's test both Janus-Pro and Moondream2 on this task using the plugins we downloaded earlier.\n",
+        "\n",
+        "First, let's run Janus:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "7tTJDzXcOOC2"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<fiftyone.operators.executor.ExecutionResult at 0x727d56dcf910>"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "QUESTION = \"What does the text on this image say? Respond only with the text on the image and nothing else.\"\n",
         "\n",
@@ -210,7 +213,7 @@
         "id": "PgqDSoCNT0-0"
       },
       "source": [
-        "And with Moondream2"
+        "And now, Moondream2:"
       ]
     },
     {
@@ -232,6 +235,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Since we don't have ground truth annotations for the text in these memes, we'll do a qualitative evaluation - a \"vibe check\" - of how well each model performs. \n",
+        "\n",
+        "We can visually inspect the results in the FiftyOne App by comparing the model outputs against the actual meme images to assess accuracy and completeness of text extraction.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -239,8 +251,7 @@
       },
       "outputs": [],
       "source": [
-        "session = fo.launch_app(ocr_view, auto=False)\n",
-        "session.url"
+        "fo.launch_app(ml_memes_dataset)"
       ]
     },
     {
@@ -249,18 +260,29 @@
         "id": "wN2m_1i2EqAb"
       },
       "source": [
-        "# Meme understanding"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sL40a93m2dKb"
-      },
-      "outputs": [],
-      "source": [
-        "memeund_view = ml_memes_dataset.clone(name=\"meme_understanding\")"
+        "# Meme understanding\n",
+        "\n",
+        "Understanding memes is more complex than OCR, because there are multiple levels of comprehension:\n",
+        "\n",
+        "1. Recognizing the scene, characters, and their expressions\n",
+        "\n",
+        "2. Understanding the reference or template being used\n",
+        "\n",
+        "3. Connecting how the text relates to the visual elements\n",
+        "\n",
+        "4. Grasping why the combination is meant to be humorous\n",
+        "\n",
+        "This means we can test a VLMs ability to:\n",
+        "\n",
+        "- Integrate multimodal information (text and visuals)\n",
+        "\n",
+        "- Understand cultural references and context\n",
+        "\n",
+        "- Grasp abstract concepts and humor\n",
+        "\n",
+        "- Explain complex social/cultural phenomena in natural language\n",
+        "\n",
+        "Let's see how our models handle this deeper level of understanding:"
       ]
     },
     {
@@ -277,7 +299,7 @@
         "\"\"\"\n",
         "\n",
         "await janus_vqa(\n",
-        "    memeund_view,\n",
+        "    ml_memes_dataset,\n",
         "    model_path=\"deepseek-ai/Janus-Pro-1B\",\n",
         "    question=MEME_UNDERSTANDING_QUESTION,\n",
         "    question_field=\"meme_understanding_question\",\n",
@@ -295,7 +317,7 @@
       "outputs": [],
       "source": [
         "await moondream(\n",
-        "    memeund_view,\n",
+        "    ml_memes_dataset,\n",
         "    revision=\"2025-01-09\",\n",
         "    operation=\"query\",\n",
         "    output_field=\"moondream_meme_understanding\",\n",
@@ -312,8 +334,60 @@
       },
       "outputs": [],
       "source": [
-        "session = fo.launch_app(memeund_view, auto=False)\n",
-        "session.url"
+        "fo.launch_app(ml_memes_dataset)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Can the VLMs find the attribution tag?\n",
+        "\n",
+        "Each meme has a small attribution in the left corner, which reads `@scott.ai`. Let's see if the VLMs can pick up on this!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ATTR_QUESTION = \"\"\"The creator of this meme has tagged themselves for self-attribution. \n",
+        "Who can we attribute as the creator of this meme? Respond with just the authors name\"\"\"\n",
+        "\n",
+        "await janus_vqa(\n",
+        "    ml_memes_dataset,\n",
+        "    model_path=\"deepseek-ai/Janus-Pro-1B\",\n",
+        "    question=ATTR_QUESTION,\n",
+        "    question_field=\"attr_question\",\n",
+        "    answer_field=\"janus_attr\",\n",
+        "    delegate=True\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "await moondream(\n",
+        "    ml_memes_dataset,\n",
+        "    revision=\"2025-01-09\",\n",
+        "    operation=\"query\",\n",
+        "    output_field=\"moondream_attr\",\n",
+        "    query_text=ATTR_QUESTION,\n",
+        "    delegate=True\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fo.launch_app(ml_memes_dataset)"
       ]
     },
     {
@@ -322,7 +396,29 @@
         "id": "ANl5h0TSVxqg"
       },
       "source": [
-        "## Now let's test these models on captioning"
+        "## Now let's test these models on captioning\n",
+        "\n",
+        "Meme captioning is a generative task that's distinct from our previous experiments:\n",
+        "\n",
+        "- Unlike OCR, which extracts existing text\n",
+        "\n",
+        "- Unlike meme understanding, which interprets the combined meaning\n",
+        "\n",
+        "- Captioning requires the model to create novel, contextually appropriate text\n",
+        "\n",
+        "This is challenging because good meme captions:\n",
+        "\n",
+        "1. Match the visual template's intended use\n",
+        "\n",
+        "2. Are culturally relevant to the target audience (in our case, the ML/AI community)\n",
+        "\n",
+        "3. Strike a right balance of humor and relatability\n",
+        "\n",
+        "4. Follow an established format of the meme template\n",
+        "\n",
+        "You could use metrics like BLEU or ROUGE to evaluate captions against references, but they often miss the aspects of humor and cultural relevance. Like the previous tasks, a qualitative \"vibe check\" is probably the most reliable way to assess the quality of the captions.\n",
+        "\n",
+        "Let's download another dataset (which is a grouped dataset, with a captioned and uncaptioned meme...but we will work with only uncaptioned) and then see what our models generate:"
       ]
     },
     {
@@ -340,7 +436,8 @@
         "    )\n",
         "\n",
         "uncaptioned_memes = memes_dataset.select_group_slices(\"template\")\n",
-        "uncaptioned_memes = uncaptioned_memes.clone()"
+        " \n",
+        "uncaptioned_memes = uncaptioned_memes.clone(name=\"vlm-captioned-memes\")"
       ]
     },
     {
@@ -356,14 +453,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "o-_FtvO4avlt"
       },
       "outputs": [],
       "source": [
-        "MEME_GENERATE = \"\"\"\n",
-        "This image is a meme. Write a caption for this meme that is\n",
+        "MEME_GENERATE = \"\"\"This image is a meme. Write a caption for this meme that is\n",
         "realted to deep learning and artificial intelligence.\n",
         "Respond only with the caption and nothing else.\n",
         "\"\"\""
@@ -413,8 +509,7 @@
       },
       "outputs": [],
       "source": [
-        "session = fo.launch_app(uncaptioned_memes, auto=False)\n",
-        "session.url"
+        "fo.launch_app(uncaptioned_memes)"
       ]
     }
   ],
