--- a/vlm_meme_understanding.ipynb
+++ b/vlm_meme_understanding.ipynb
@@ -343,7 +343,22 @@
       "source": [
         "## Can the VLMs find the attribution tag?\n",
         "\n",
-        "Each meme has a small attribution in the left corner, which reads `@scott.ai`. Let's see if the VLMs can pick up on this!"
+        "Each meme has a small attribution in the left corner, which reads `@scott.ai`. This presents an interesting test case for VLMs' visual capabilities because:\n",
+        "\n",
+        "1. The attribution is intentionally subtle - a small watermark that could be easily missed even by human viewers\n",
+        "\n",
+        "2. It tests the model's ability to detect and read fine details in images\n",
+        "\n",
+        "3. It evaluates whether VLMs can distinguish between the main meme content and metadata like attributions\n",
+        "\n",
+        "4. It helps us understand if VLMs can maintain attention to small details while processing the broader image\n",
+        "\n",
+        "This kind of test is particularly relevant for real-world applications where models might need to:\n",
+        "- Detect watermarks or copyright information\n",
+        "- Read small print or disclaimers\n",
+        "- Identify subtle branding elements\n",
+        "\n",
+        "Let's see if the VLMs can pick up on this subtle detail:"
       ]
     },
     {
