actually finalizing words

--- a/vlm_meme_understanding.ipynb
+++ b/vlm_meme_understanding.ipynb
@@ -1,6 +1,36 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Memes are, arguably, the best proving ground for Vision Language Models (VLMs) because they combine multiple challenging aspects of visual and linguistic understanding:\n",
+        "\n",
+        "1. Memes require understanding both visual elements and text, and crucially, how they interact\n",
+        "\n",
+        "2. They often rely on shared cultural knowledge or references\n",
+        "\n",
+        "3. The humor often emerges from subtle interactions between the image and text\n",
+        "\n",
+        "4. They appear in different formats, templates, and styles\n",
+        "\n",
+        "5. Text can appear in various fonts, sizes, and positions\n",
+        "\n",
+        "In this highly rigorous, academic, journal quality blog post, I'll put two VLMs (Janus-Pro and Moondream2) through their paces on three distinct tasks:\n",
+        "\n",
+        "\n",
+        "1. OCR: Can they accurately extract text from memes?\n",
+        "\n",
+        "2. Meme Understanding: Can they explain what makes a meme funny and relevant?\n",
+        "\n",
+        "3. Caption Generation: Can they generate contextually appropriate, humorous captions?\n",
+        "\n",
+        "I'll also test their attention to detail by seeing if they can spot subtle watermarks, giving us insight into their visual processing capabilities.\n",
+        "\n",
+        "Start by setting up our environment and downloading the necessary plugins:"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
