--- a/vlm_meme_understanding.ipynb
+++ b/vlm_meme_understanding.ipynb
@@ -120,7 +120,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "I found [this webiste - scott.ai from Scott Penberthy](https://scott.ai/2019-08-06-memeified-ng) which had some awesome machine learning memes on it. I parsed these meme's into a FiftyOne dataset. You can download the dataset [from Hugging Face](https://huggingface.co/datasets/harpreetsahota/memes-dataset) as well."
+        "I found [this webiste - scott.ai from Scott Penberthy](https://scott.ai/2019-08-06-memeified-ng) which had some awesome machine learning memes on it. I parsed these meme's into a FiftyOne dataset. You can download the dataset [from Hugging Face](https://huggingface.co/datasets/harpreetsahota/memes-dataset) as well. I also recommend checking out the [Voxel51 org on Hugging Face](https://huggingface.co/Voxel51) to see the other datasets we have uploaded."
       ]
     },
     {
